cdk.out/dentalxchage-qa-automation-stack.template.json
{
 "Resources": {
  "DentalXChangeSeleniumClusterclusterA1039259": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "CapacityProviders": [
     "FARGATE",
     "FARGATE_SPOT"
    ],
    "ClusterName": "dentalxchange-selenium",
    "ClusterSettings": [
     {
      "Name": "containerInsights",
      "Value": "enabled"
     }
    ],
    "DefaultCapacityProviderStrategy": [
     {
      "Base": 4,
      "CapacityProvider": "FARGATE",
      "Weight": 1
     },
     {
      "CapacityProvider": "FARGATE_SPOT",
      "Weight": 4
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/cluster/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Port 4444 for inbound traffic",
      "FromPort": 4444,
      "IpProtocol": "tcp",
      "ToPort": 4444
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Port 5555 for inbound traffic",
      "FromPort": 5555,
      "IpProtocol": "tcp",
      "ToPort": 5555
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Port 4442 for inbound traffic",
      "FromPort": 4442,
      "IpProtocol": "tcp",
      "ToPort": 4442
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Port 4443 for inbound traffic",
      "FromPort": 4443,
      "IpProtocol": "tcp",
      "ToPort": 4443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Port 80 for inbound traffic",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C84444F8F893CF": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 4444,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "ToPort": 4444
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C8:4444"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B544440A6DBF7F": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 4444,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "ToPort": 4444
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:4444"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C8444265C30DD4": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 4442,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "ToPort": 4442
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C8:4442"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B544429F27D4F6": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 4442,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "ToPort": 4442
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:4442"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C8444362BF6FBC": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 4443,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "ToPort": 4443
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C8:4443"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B544436D46147C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 4443,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "ToPort": 4443
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:4443"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C85555ABC0CE3A": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 5555,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "ToPort": 5555
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroupD29987C8:5555"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumsgfromdentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5555575E500AE": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 5555,
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "ToPort": 5555
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-sg/from dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:5555"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
       "GroupId"
      ]
     },
     {
      "Fn::GetAtt": [
       "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     "subnet-0d12f611a081ada2c",
     "subnet-0baafba024fedb313"
    ],
    "Type": "application"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumalbD88128AC",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 4442",
      "FromPort": 4442,
      "IpProtocol": "tcp",
      "ToPort": 4442
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 4443",
      "FromPort": 4443,
      "IpProtocol": "tcp",
      "ToPort": 4443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 4444",
      "FromPort": 4444,
      "IpProtocol": "tcp",
      "ToPort": 4444
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 5555",
      "FromPort": 5555,
      "IpProtocol": "tcp",
      "ToPort": 5555
     }
    ],
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/SecurityGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGrouptodentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B544444F08A0D8": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "FromPort": 4444,
    "ToPort": 4444
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/SecurityGroup/to dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:4444"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGrouptodentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5444277D11476": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "FromPort": 4442,
    "ToPort": 4442
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/SecurityGroup/to dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:4442"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGrouptodentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5444364368E2E": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "FromPort": 4443,
    "ToPort": 4443
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/SecurityGroup/to dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:4443"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGrouptodentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B55555F9C5AE0D": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumalbSecurityGroup8BF164E5",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
      "GroupId"
     ]
    },
    "FromPort": 5555,
    "ToPort": 5555
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/SecurityGroup/to dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxchangeseleniumsgA34E99B5:5555"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener803B48C806": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener80ECSGroupA16BB55F"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener80/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener80ECSGroupA16BB55F": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/status",
    "HealthCheckPort": "4444",
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener80/ECSGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4442065C2C1B": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4442ECSGroup197105FC"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B"
    },
    "Port": 4442,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener4442/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4442ECSGroup197105FC": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/status",
    "HealthCheckPort": "4444",
    "Port": 4442,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener4442/ECSGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4443F7441E03": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4443ECSGroup5166B159"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B"
    },
    "Port": 4443,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener4443/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4443ECSGroup5166B159": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/status",
    "HealthCheckPort": "4444",
    "Port": 4443,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener4443/ECSGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4444A970D620": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4444ECSGroupC66970BB"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B"
    },
    "Port": 4444,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener4444/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4444ECSGroupC66970BB": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/status",
    "HealthCheckPort": "4444",
    "Port": 4444,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener4444/ECSGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener55556AFCF62E": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener5555ECSGroup08D8A4F5"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B"
    },
    "Port": 5555,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener5555/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener5555ECSGroup08D8A4F5": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckIntervalSeconds": 120,
    "HealthCheckPath": "/status",
    "HealthCheckPort": "4444",
    "Port": 5555,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": "vpc-0c22a4472f6bddf04"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalxchange-selenium-alb/Listener5555/ECSGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefTaskRole4E921648": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-task-def/TaskRole/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefTaskRoleDefaultPolicyC42D98F4": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ssmmessages:CreateControlChannel",
        "ssmmessages:CreateDataChannel",
        "ssmmessages:OpenControlChannel",
        "ssmmessages:OpenDataChannel"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "logs:DescribeLogGroups",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefTaskRoleDefaultPolicyC42D98F4",
    "Roles": [
     {
      "Ref": "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefTaskRole4E921648"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-task-def/TaskRole/DefaultPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdef45483497": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Cpu": 1024,
      "Environment": [
       {
        "Name": "SE_OPTS",
        "Value": "--log-level FINE"
       }
      ],
      "Essential": true,
      "Image": "selenium/hub:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefseleniumhubcontainerLogGroupDEB2661A"
        },
        "awslogs-stream-prefix": "selenium-hub-logs",
        "awslogs-region": "us-east-1"
       }
      },
      "Memory": 2048,
      "Name": "selenium-hub-container",
      "PortMappings": [
       {
        "ContainerPort": 4444,
        "HostPort": 4444,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 4443,
        "HostPort": 4443,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 4442,
        "HostPort": 4442,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 5555,
        "HostPort": 5555,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "1024",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefExecutionRoleC049BA1E",
      "Arn"
     ]
    },
    "Family": "dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxseleniumhubtaskdefD24085A0",
    "Memory": "2048",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefTaskRole4E921648",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-task-def/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefseleniumhubcontainerLogGroupDEB2661A": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-task-def/selenium-hub-container/LogGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefExecutionRoleC049BA1E": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-task-def/ExecutionRole/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefExecutionRoleDefaultPolicyDB3CC866": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefseleniumhubcontainerLogGroupDEB2661A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefExecutionRoleDefaultPolicyDB3CC866",
    "Roles": [
     {
      "Ref": "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdefExecutionRoleC049BA1E"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-task-def/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumhubserviceService5B0D8991": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 100,
     "MinimumHealthyPercent": 75
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "EnableExecuteCommand": true,
    "HealthCheckGracePeriodSeconds": 300,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "selenium-hub-container",
      "ContainerPort": 4444,
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener80ECSGroupA16BB55F"
      }
     },
     {
      "ContainerName": "selenium-hub-container",
      "ContainerPort": 4442,
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4442ECSGroup197105FC"
      }
     },
     {
      "ContainerName": "selenium-hub-container",
      "ContainerPort": 4443,
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4443ECSGroup5166B159"
      }
     },
     {
      "ContainerName": "selenium-hub-container",
      "ContainerPort": 4444,
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4444ECSGroupC66970BB"
      }
     },
     {
      "ContainerName": "selenium-hub-container",
      "ContainerPort": 5555,
      "TargetGroupArn": {
       "Ref": "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener5555ECSGroup08D8A4F5"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       "subnet-0d12f611a081ada2c",
       "subnet-0baafba024fedb313"
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "DentalXChangeSeleniumClusterdentalxseleniumhubtaskdef45483497"
    }
   },
   "DependsOn": [
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4442ECSGroup197105FC",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4442065C2C1B",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4443ECSGroup5166B159",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4443F7441E03",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4444ECSGroupC66970BB",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener4444A970D620",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener5555ECSGroup08D8A4F5",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener55556AFCF62E",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener80ECSGroupA16BB55F",
    "DentalXChangeSeleniumClusterdentalxchangeseleniumalbListener803B48C806"
   ],
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-hub-service/Service"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargethubRoleD270ACCF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "application-autoscaling.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-hub/Role/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargethubC7300963": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 10,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
       },
       "/",
       {
        "Fn::GetAtt": [
         "DentalXChangeSeleniumClusterdentalxseleniumhubserviceService5B0D8991",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterseleniumscalableTargethubRoleD270ACCF",
      "Arn"
     ]
    },
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-hub/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubLowerPolicy29AE23D1": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "dentalxchageqaautomationstackDentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubLowerPolicy6C7050B4",
    "PolicyType": "StepScaling",
    "ScalingTargetId": {
     "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargethubC7300963"
    },
    "StepScalingPolicyConfiguration": {
     "AdjustmentType": "ChangeInCapacity",
     "Cooldown": 180,
     "MetricAggregationType": "Maximum",
     "StepAdjustments": [
      {
       "MetricIntervalUpperBound": 0,
       "ScalingAdjustment": -1
      }
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-hub/step-metric-scaling-hub/LowerPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubLowerAlarm81C72659": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "ComparisonOperator": "LessThanOrEqualToThreshold",
    "EvaluationPeriods": 1,
    "AlarmActions": [
     {
      "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubLowerPolicy29AE23D1"
     }
    ],
    "AlarmDescription": "Lower threshold scaling alarm",
    "Dimensions": [
     {
      "Name": "ClusterName",
      "Value": {
       "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
      }
     },
     {
      "Name": "ServiceName",
      "Value": {
       "Fn::GetAtt": [
        "DentalXChangeSeleniumClusterdentalxseleniumhubserviceService5B0D8991",
        "Name"
       ]
      }
     }
    ],
    "MetricName": "CPUUtilization",
    "Namespace": "AWS/ECS",
    "Period": 10,
    "Statistic": "Maximum",
    "Threshold": 30
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-hub/step-metric-scaling-hub/LowerAlarm/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubUpperPolicy3BC7E9EF": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "dentalxchageqaautomationstackDentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubUpperPolicy526F0B89",
    "PolicyType": "StepScaling",
    "ScalingTargetId": {
     "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargethubC7300963"
    },
    "StepScalingPolicyConfiguration": {
     "AdjustmentType": "ChangeInCapacity",
     "Cooldown": 180,
     "MetricAggregationType": "Maximum",
     "StepAdjustments": [
      {
       "MetricIntervalLowerBound": 0,
       "ScalingAdjustment": 3
      }
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-hub/step-metric-scaling-hub/UpperPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubUpperAlarmED57700A": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "ComparisonOperator": "GreaterThanOrEqualToThreshold",
    "EvaluationPeriods": 1,
    "AlarmActions": [
     {
      "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargethubstepmetricscalinghubUpperPolicy3BC7E9EF"
     }
    ],
    "AlarmDescription": "Upper threshold scaling alarm",
    "Dimensions": [
     {
      "Name": "ClusterName",
      "Value": {
       "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
      }
     },
     {
      "Name": "ServiceName",
      "Value": {
       "Fn::GetAtt": [
        "DentalXChangeSeleniumClusterdentalxseleniumhubserviceService5B0D8991",
        "Name"
       ]
      }
     }
    ],
    "MetricName": "CPUUtilization",
    "Namespace": "AWS/ECS",
    "Period": 10,
    "Statistic": "Maximum",
    "Threshold": 80
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-hub/step-metric-scaling-hub/UpperAlarm/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefTaskRoleD91139B4": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-task-def/TaskRole/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefTaskRoleDefaultPolicy93CE1903": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ssmmessages:CreateControlChannel",
        "ssmmessages:CreateDataChannel",
        "ssmmessages:OpenControlChannel",
        "ssmmessages:OpenDataChannel"
       ],
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": "logs:DescribeLogGroups",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:DescribeLogStreams",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefTaskRoleDefaultPolicy93CE1903",
    "Roles": [
     {
      "Ref": "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefTaskRoleD91139B4"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-task-def/TaskRole/DefaultPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdef012DBD87": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Command": [
       "PRIVATE=$(curl -s http://169.254.170.2/v2/metadata | jq -r '.Containers[0].Networks[0].IPv4Addresses[0]') ; export SE_OPTS=\"--host $PRIVATE\" ; /opt/bin/entry_point.sh"
      ],
      "Cpu": 1024,
      "EntryPoint": [
       "sh",
       "-c"
      ],
      "Environment": [
       {
        "Name": "SE_EVENT_BUS_HOST",
        "Value": {
         "Fn::GetAtt": [
          "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B",
          "DNSName"
         ]
        }
       },
       {
        "Name": "SE_EVENT_BUS_PUBLISH_PORT",
        "Value": "4442"
       },
       {
        "Name": "SE_EVENT_BUS_SUBSCRIBE_PORT",
        "Value": "4443"
       },
       {
        "Name": "NODE_MAX_INSTANCES",
        "Value": "100"
       },
       {
        "Name": "NODE_MAX_SESSION",
        "Value": "100"
       },
       {
        "Name": "SE_OPTS",
        "Value": "--log-level FINE"
       }
      ],
      "Essential": true,
      "Image": "selenium/node-chrome:latest",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefseleniumchromecontainerLogGroup7725DC1E"
        },
        "awslogs-stream-prefix": "selenium-chrome-logs",
        "awslogs-region": "us-east-1"
       }
      },
      "Memory": 2048,
      "Name": "selenium-chrome-container",
      "PortMappings": [
       {
        "ContainerPort": 4444,
        "HostPort": 4444,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 4443,
        "HostPort": 4443,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 4442,
        "HostPort": 4442,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 5555,
        "HostPort": 5555,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "1024",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefExecutionRole17AE0CCB",
      "Arn"
     ]
    },
    "Family": "dentalxchageqaautomationstackDentalXChangeSeleniumClusterdentalxseleniumchrometaskdef3F23D3C2",
    "Memory": "2048",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefTaskRoleD91139B4",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-task-def/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefseleniumchromecontainerLogGroup7725DC1E": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-task-def/selenium-chrome-container/LogGroup/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefExecutionRole17AE0CCB": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-task-def/ExecutionRole/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefExecutionRoleDefaultPolicy1F5CD66F": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefseleniumchromecontainerLogGroup7725DC1E",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefExecutionRoleDefaultPolicy1F5CD66F",
    "Roles": [
     {
      "Ref": "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdefExecutionRole17AE0CCB"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-task-def/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterdentalxseleniumchromeserviceService5F4D5430": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 100,
     "MinimumHealthyPercent": 75
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "EnableExecuteCommand": true,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "ENABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "DentalXChangeSeleniumClusterdentalxchangeseleniumsg39207702",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       "subnet-0d12f611a081ada2c",
       "subnet-0baafba024fedb313"
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "DentalXChangeSeleniumClusterdentalxseleniumchrometaskdef012DBD87"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/dentalx-selenium-chrome-service/Service"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargetchromeRole4C95C603": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "application-autoscaling.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-chrome/Role/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargetchrome800FE5F9": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 10,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
       },
       "/",
       {
        "Fn::GetAtt": [
         "DentalXChangeSeleniumClusterdentalxseleniumchromeserviceService5F4D5430",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": {
     "Fn::GetAtt": [
      "DentalXChangeSeleniumClusterseleniumscalableTargetchromeRole4C95C603",
      "Arn"
     ]
    },
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-chrome/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeLowerPolicyE2624C83": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "dentalxchageqaautomationstackDentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeLowerPolicyCA88765F",
    "PolicyType": "StepScaling",
    "ScalingTargetId": {
     "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargetchrome800FE5F9"
    },
    "StepScalingPolicyConfiguration": {
     "AdjustmentType": "ChangeInCapacity",
     "Cooldown": 180,
     "MetricAggregationType": "Maximum",
     "StepAdjustments": [
      {
       "MetricIntervalUpperBound": 0,
       "ScalingAdjustment": -1
      }
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-chrome/step-metric-scaling-chrome/LowerPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeLowerAlarmEE0CB7CB": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "ComparisonOperator": "LessThanOrEqualToThreshold",
    "EvaluationPeriods": 1,
    "AlarmActions": [
     {
      "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeLowerPolicyE2624C83"
     }
    ],
    "AlarmDescription": "Lower threshold scaling alarm",
    "Dimensions": [
     {
      "Name": "ClusterName",
      "Value": {
       "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
      }
     },
     {
      "Name": "ServiceName",
      "Value": {
       "Fn::GetAtt": [
        "DentalXChangeSeleniumClusterdentalxseleniumchromeserviceService5F4D5430",
        "Name"
       ]
      }
     }
    ],
    "MetricName": "CPUUtilization",
    "Namespace": "AWS/ECS",
    "Period": 10,
    "Statistic": "Maximum",
    "Threshold": 30
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-chrome/step-metric-scaling-chrome/LowerAlarm/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeUpperPolicy9A034321": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "dentalxchageqaautomationstackDentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeUpperPolicyC2EB66C3",
    "PolicyType": "StepScaling",
    "ScalingTargetId": {
     "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargetchrome800FE5F9"
    },
    "StepScalingPolicyConfiguration": {
     "AdjustmentType": "ChangeInCapacity",
     "Cooldown": 180,
     "MetricAggregationType": "Maximum",
     "StepAdjustments": [
      {
       "MetricIntervalLowerBound": 0,
       "ScalingAdjustment": 3
      }
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-chrome/step-metric-scaling-chrome/UpperPolicy/Resource"
   }
  },
  "DentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeUpperAlarm7DAABA21": {
   "Type": "AWS::CloudWatch::Alarm",
   "Properties": {
    "ComparisonOperator": "GreaterThanOrEqualToThreshold",
    "EvaluationPeriods": 1,
    "AlarmActions": [
     {
      "Ref": "DentalXChangeSeleniumClusterseleniumscalableTargetchromestepmetricscalingchromeUpperPolicy9A034321"
     }
    ],
    "AlarmDescription": "Upper threshold scaling alarm",
    "Dimensions": [
     {
      "Name": "ClusterName",
      "Value": {
       "Ref": "DentalXChangeSeleniumClusterclusterA1039259"
      }
     },
     {
      "Name": "ServiceName",
      "Value": {
       "Fn::GetAtt": [
        "DentalXChangeSeleniumClusterdentalxseleniumchromeserviceService5F4D5430",
        "Name"
       ]
      }
     }
    ],
    "MetricName": "CPUUtilization",
    "Namespace": "AWS/ECS",
    "Period": 10,
    "Statistic": "Maximum",
    "Threshold": 80
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/DentalXChangeSeleniumCluster/selenium-scalableTarget-chrome/step-metric-scaling-chrome/UpperAlarm/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31R227CMAz9Ft5DoGjS9jjGLpqEtInyAyY1XWhIqsQBoSr/vrRpWdmkPeX4+NjHdjK+mN/x+eQRzm4qimrWCGORNzmBqNjKaEfWC2IbdMZbgWy11x+eak8tGtjA2vIGhePNSnlHaNv0AF/BlkC4BVc9415qSdLoVvCbMZpAarQjrq/N0Z5ksu9hYCgWcVAU3kq6vFnj65T+j3jXpUXn/vAvHR17KnAkhTJQ7ECBFlKXp2izrGslBbQjrWPuqculLW/isU7G5XWvGfAov42bIV3HHIWBSTjyZmNUt3D3fppYd2nDhAJTpoznXpvy2mLA8Tt+bMCTcQJUXCReKwLYKUxm3RVumZywzpO6dxwxSzF83I0ksHgvX5yBxFe8lAJ7bDUdCCEwbQrkBzc7ZQ88u+fZ5OCknFqvSR6Rb9L7DV5f7O2JAgAA"
   },
   "Metadata": {
    "aws:cdk:path": "dentalxchage-qa-automation-stack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "DentalXChangeSeleniumClusterLoadBalancerDNS78805658": {
   "Value": {
    "Fn::GetAtt": [
     "DentalXChangeSeleniumClusterdentalxchangeseleniumalbBBD6385B",
     "DNSName"
    ]
   },
   "Export": {
    "Name": "DentalXChange-Selenium-Hub-DNS"
   }
  }
 }
}
